# sql-stream

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  PUBLISHING.md  README.md
.github/workflows/: ci.yml  release.yml
docs/: PROFILING.md
src/: cli.rs  engine.rs  error.rs  lib.rs  main.rs
tests/: integration_test.rs
tests/fixtures/: sample.csv  sample.json
