[package]
name = "sql-stream"
version = "0.1.0"
edition = "2021"
authors = ["SQL Stream Contributors"]
description = "A production-grade CLI tool for executing SQL queries against CSV/JSON files using streaming architecture"
license = "MIT OR Apache-2.0"
repository = "https://github.com/1cbyc/sql-stream"
keywords = ["sql", "csv", "json", "datafusion", "cli"]
categories = ["command-line-utilities", "database"]

[dependencies]
# Core SQL engine
datafusion = "45.0.0"
arrow = "53.3.0"

# Async runtime
tokio = { version = "1.42", features = ["full"] }

# CLI parsing
clap = { version = "4.5", features = ["derive"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3.14"
csv = "1.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
